@@ -1,3 +1,8 @@
+2025-03-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test18-file-attributes)
+	(tramp-test21-file-links): Adapt tests.
+
 2025-03-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test28-process-file): Adapt test.
